yaml-examples/flexget/flexget-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: flexget
  namespace: default
  labels:
    app: flexget
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flexget
  template:
    metadata:
      labels:
        app: flexget
    spec:
      containers:
      - name: flexget
        image: wiserain/flexget
        imagePullPolicy: Always
        ports:
          - containerPort: 5050
        volumeMounts:
          - mountPath: /config
            name: config
          - mountPath: /data
            name: data
          - mountPath: /downloads
            name: downloads
          - mountPath: /movies
            name: movies
          - mountPath: /tv
            name: tv
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: flexget-config
        - name: data
          persistentVolumeClaim:
            claimName: flexget-data
        - name: downloads
          hostPath:
            path: /mnt/share/Downloads
        - name: movies
          hostPath:
            path: /mnt/share/Movies
        - name: tv
          hostPath:
            path: /mnt/share/Television
